apps/kubernetes/k3s/apps/change-detection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: change-detection
  namespace: change-detection
spec:
  selector:
    app: change-detection
  ports:
    - name: http
      port: 5000
      targetPort: 5000
