apps/kubernetes/k3s/apps/change-detection/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: change-detection
  namespace: change-detection
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`change.hughboi.vip`)
      kind: Rule
      services:
        - name: change-detection
          port: 5000
  tls:
    secretName: hughboi-tls
